# wrtds-py

./: .gitignore  CLAUDE.md  DOCUMENTATION_PLAN.md  GEMINI.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  documentation.yml  test.yml
conda/: meta.yaml
docs/: index.md
docs/getting-started/: input-data.md  installation.md  quickstart.md
docs/guide/: bootstrap.md  fitting.md  kalman.md  overview.md  plotting.md  summaries.md  trends.md
docs/notes/: changelog.md  r-vs-python.md
docs/reference/: bootstrap.md  core.md  cross_val.md  data_prep.md  flow_norm.md  kalman.md  regression.md  summaries.md  surfaces.md  trends.md  wrtds.md
docs/reference/plots/: data_overview.md  diagnostics.md  results.md
wrtds/: __init__.py  bootstrap.py  core.py  cross_val.py  data_prep.py  flow_norm.py  kalman.py  regression.py  summaries.py  surfaces.py  trends.py
wrtds/plots/: __init__.py  data_overview.py  diagnostics.py  results.py  utils.py
wrtds/tests/: conftest.py  test_bootstrap.py  test_core.py  test_cross_val.py  test_data_prep.py  test_flow_norm.py  test_kalman.py  test_plots.py  test_regression.py  test_summaries.py  test_surfaces.py  test_trends.py  test_vs_r.py
wrtds/tests/fixtures/: README.md  choptank_annual.csv  choptank_daily_fitted.csv  choptank_daily_input.csv  choptank_daily_kalman.csv  choptank_groups.csv  choptank_info.json  choptank_pairs.csv  choptank_sample_cv.csv  choptank_sample_input.csv  choptank_surface_index.json  generate_fixtures.R  generate_fixtures.py
